commit: 工具类调整